# ros_can_nodes

./: .gitignore  LICENSE  README.md  design  docs
src/: README.md  src.kdev4  test2.cpp
src/custom_message_sender/: CMakeLists.txt  package.xml
src/custom_message_sender/include/: can.hpp  msg_builders.hpp
src/custom_message_sender/src/: can.cpp  main.cpp  msg_builders.cpp
src/ros_can_nodes/: CMakeLists.txt  package.xml
src/ros_can_nodes/cmake/: generate_message_properties_map.cmake
src/ros_can_nodes/include/: CANBuffers.hpp  CANHelpers.hpp  CANMsgRouter.hpp  CANSendQueue.hpp  IntrospectionHelpers.hpp  MessageBuffer.hpp  NodeClass.hpp  ROSCANConstants.hpp  RosCanNode.h  RosCanNode.hpp  RosCanNodeManager.hpp  TopicBuffers.hpp  callback_queue_interface.h  common.h  connection_manager.h  file_log.h  forwards.h  intraprocess_publisher_link.h  intraprocess_subscriber_link.h  io.h  main.h  network.h  param.h  poll_manager.h  publication.h  publisher.h  publisher_link.h  rosout_appender.h  shape_shifter.hpp  single_subscriber_publisher.h  subscriber.h  subscription.h  timer_manager.h  topic_manager.h  transport_publisher_link.h  xmlrpc_manager.h
src/ros_can_nodes/include/ros/: Node.h  init.h
src/ros_can_nodes/include/ros_node_lib/: RosNode.hpp  advertise_options.h  callback_queue.h  callback_queue_interface.h  common.h  connection_manager.h  internal_timer_manager.h  intraprocess_publisher_link.h  intraprocess_subscriber_link.h  network.h  poll_manager.h  publication.h  publisher.h  publisher_link.h  rosdefs.h  rosout_appender.h  single_subscriber_publisher.h  subscribe_options.h  subscriber.h  subscriber_callbacks.h  subscriber_link.h  subscription.h  subscription_queue.h  timer_manager.h  topic_manager.h  transport_publisher_link.h  transport_subscriber_link.h  xmlrpc_manager.h
src/ros_can_nodes/scripts/: generate_message_properties_map.py
src/ros_can_nodes/src/: CANBuffers.cpp  CANHelpers.cpp  CANMsgRouter.cpp  CANSendQueue.cpp  CanMsgRouter.cpp  IntrospectionHelpers.cpp  MessageBuffer.cpp  NodeClass.cpp  RosCanNode.cpp  RosCanNodeManager.cpp  RosCanNodeTest.cpp  TopicBuffers.cpp  callback_queue.cpp  connection_manager.cpp  intraprocess_publisher_link.cpp  intraprocess_subscriber_link.cpp  main.cpp  network.cpp  poll_manager.cpp  publisher.cpp  publisher_link.cpp  rosout_appender.cpp  subscriber.cpp  subscriber_link.cpp  subscription.cpp  subscription_queue.cpp  topic_manager.cpp  transport_publisher_link.cpp  transport_subscriber_link.cpp  xmlrpc_manager.cpp
src/ros_can_nodes/src/libros/: Node.cpp  init.cpp
src/ros_can_nodes/src/libs/: common.cpp  io.cpp  network.cpp  xmlrpc_manager.cpp
src/ros_can_nodes/src/ros_node_lib/: RosNode.cpp  RosNodeTest.cpp  callback_queue.cpp  connection_manager.cpp  internal_timer_manager.cpp  intraprocess_publisher_link.cpp  intraprocess_subscriber_link.cpp  network.cpp  poll_manager.cpp  publication.cpp  publisher.cpp  publisher_link.cpp  rosout_appender.cpp  single_subscriber_publisher.cpp  subscriber.cpp  subscriber_link.cpp  subscription.cpp  subscription_queue.cpp  topic_manager.cpp  transport_publisher_link.cpp  transport_subscriber_link.cpp  xmlrpc_manager.cpp
src/sending/: CMakeLists.txt  package.xml
src/sending/include/: CANHelpers.hpp  MessageBuffer.h
src/sending/src/: CANHelpers.cpp  MessageBuffer.cpp  buffer.cpp  main.cpp  publisher.cpp  test2.cpp
